--- a/src/MVC5SampleApp/Views/Shared/_Layout.cshtml
+++ b/src/MVC5SampleApp/Views/Shared/_Layout.cshtml
@@ -1,6 +1,6 @@
 ﻿@using System.Web.Optimization
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,27 +20,26 @@
                 </button>
 
                 @Html.ActionLink("ASP.NET MVC 5 Sample Site", "Index", "Home", null, new { @class = "navbar-brand" })
-            </div>
-            
-            <!-- Unsecured links -->
-        <div class="navbar-collapse collapse">
-                   
-                        <ul class="nav navbar-nav">
-                            <li>@Html.ActionLink("Unsecured", "", "")</li>
-                            @if (Request.IsAuthenticated) { 
-                                <li>@Html.ActionLink("Secured", "", "")</li>
-                                
-                                
-                            }
-                            </ul>
-                    @Html.Partial("_LoginPartial")
-                  
-                    
+
+                <ul class="nav navbar-nav">
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Samples <span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li>@Html.ActionLink("Action Results", "Index", "Example")</li>
+                            <li>@Html.ActionLink("CSRF", "Index", "Feedback")</li>
+                        </ul>
+                    </li>
+
+                    @if (Request.IsAuthenticated)
+                    { 
+                        <li>@Html.ActionLink("Secured", "", "")</li>
+                    }
+                </ul>
+                @Html.Partial("_LoginPartial")
             </div>
         </div>
-        </div>
-    
-            
+    </div>
+
     <div class="container body-content">
         @RenderBody()
         <hr />
@@ -48,8 +47,10 @@
             <p>ASP.NET MVC 5 Sample Site &copy; @DateTime.Now.Year</p>
         </footer>
     </div>
-       @Scripts.Render("~/bundles/jquery")
+
+    @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+
 </body>
 </html>
