--- a/src/MVC5SampleApp/Views/Shared/_Layout.cshtml
+++ b/src/MVC5SampleApp/Views/Shared/_Layout.cshtml
@@ -32,11 +32,18 @@
 
                     @if (Request.IsAuthenticated)
                     { 
-                        <li>@Html.ActionLink("Secured", "", "")</li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Admin <span class="caret"></span></a>
+                           <ul class="dropdown-menu" role="menu">
+                            <li>@Html.ActionLink("Users", "Index", "User")</li>
+                            <li>@Html.ActionLink("Roles", "Index", "Role")</li>
+                            <li>@Html.ActionLink("Notices", "Index", "Notice")</li>
+                        </ul>
+                    </li>
                     }
                 </ul>
-                @Html.Partial("_LoginPartial")
             </div>
+                @Html.Partial("_LoginPartial")
         </div>
     </div>
 
