--- a/src/MVC5SampleApp/Views/Role/Index.cshtml
+++ b/src/MVC5SampleApp/Views/Role/Index.cshtml
@@ -3,57 +3,60 @@
     ViewBag.Title = "Manage Roles";
 }
 
-<h2>Manage Roles</h2>
+
+<div class="row">
+
+    <div class="col-md-8 col-lg-offset-2">
+        <h2>Manage Roles</h2>
+
+        <div class="well">
+            <div class="text-center">
+
+                @using (Html.BeginForm("Create", "Role", FormMethod.Post, new { @class = "form-inline" }))
+                {
+                    @Html.AntiForgeryToken()
+                    @Html.ValidationSummary(true)
+                    <form class="form-inline">
+                        <div class="form-group">
+                            <label for="RoleName">Add new role</label>
+                            @Html.TextBox("RoleName", null, new { @class = "form-control", placeholder = "name", max = 200, style = "width:400px;" })
+                        </div>
+                        <button type="submit" class="btn btn-default">Add Role</button>
+                    </form>
+                }
+            </div>
+        </div>
+
+
+        @if (Model.Any())
+        {
+            
+                <table class="table table-striped">
+                    <tr>
+                        <th>Name
+                        </th>
+                        <th>Actions
+                        </th>
+                    </tr>
+
+                    @foreach (var roleModel in Model)
+                    {
+                        <tr>
+                            <td>@roleModel.Name</td>
+                            <td></td>
+
+                        </tr>
+                    }
+
+                </table>
+            
+        }
+        else
+        {
+            <p>There are no roles in the system</p>
+        }
 
 
 
-<div class="well">
-    <div class="text-center">
-
-    @using (Html.BeginForm("Create", "Role", FormMethod.Post, new { @class = "form-inline" }))
-    {
-        @Html.AntiForgeryToken()
-        @Html.ValidationSummary(true)
-        <form class="form-inline">
-          <div class="form-group">
-            <label for="RoleName">Add new role</label>
-            @Html.TextBox("RoleName", null,  new { @class = "form-control", placeholder="name", max=200, style="width:400px;" }) 
-          </div>
-          <button type="submit" class="btn btn-default">Add Role</button>
-        </form>
-    }
     </div>
 </div>
-
-
-@if (Model.Any())
-{
-<div class="row">
-<table class="table table-striped">
-    <tr>
-        <th>
-            Name
-        </th>
-        <th>
-            Actions
-        </th>
-    </tr>
-
-    @foreach (var roleModel in Model)
-    {
-        <tr>
-            <td>@roleModel.Name</td>
-            <td></td>
-
-        </tr>
-    }
-        
-</table>
-</div>
-    }
-else
-{
-    <p>There are no roles in the system</p>
-}
-
-
