--- a/src/MVC5SampleApp/Views/Role/Index.cshtml
+++ b/src/MVC5SampleApp/Views/Role/Index.cshtml
@@ -6,7 +6,7 @@
 
 <div class="row">
 
-    <div class="col-md-8 col-lg-offset-2">
+    <div class="col-md-6 col-lg-offset-2">
         <h2>Manage Roles</h2>
 
         <div class="well">
@@ -31,32 +31,55 @@
         @if (Model.Any())
         {
             
-                <table class="table table-striped">
+            <table class="table table-striped">
+                <tr>
+                    <th>Name
+                    </th>
+                               
+                    <th>
+                        <div class="text-right">
+                            Actions
+                        </div>
+                    </th>
+                </tr>
+
+                @foreach (var roleModel in Model)
+                {
                     <tr>
-                        <th>Name
-                        </th>
-                        <th>Actions
-                        </th>
+                        <td>@roleModel.Name</td>
+                        <td>
+                            <div class="text-right">
+                                <a href="~/Role/Delete?roleName=@roleModel.Name" title="delete">
+                                       
+                                    <button type="button" class="btn btn-default btn-xs" aria-label="Left Align" data-toggle="tooltip" data-placement="right" title="delete">
+                                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> 
+                                    </button>
+                                </a>
+                            </div>
+                            
+                            
+                        </td>
                     </tr>
-
-                    @foreach (var roleModel in Model)
-                    {
-                        <tr>
-                            <td>@roleModel.Name</td>
-                            <td></td>
-
-                        </tr>
-                    }
-
-                </table>
-            
+                }
+            </table>
         }
         else
         {
             <p>There are no roles in the system</p>
         }
-
-
-
     </div>
 </div>
+
+@section scripts {
+   <script type="text/javascript">
+    
+       $(document).ready(function () {
+
+           $('#RoleName').focus();
+           $('[data-toggle="tooltip"]').tooltip();
+           
+    });
+    
+</script>
+
+}
