--- a/src/MVC5SampleApp/Views/Role/Index.cshtml
+++ b/src/MVC5SampleApp/Views/Role/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<MVC5SampleApp.Models.RoleModel>
+﻿@using System.Web.Optimization
+@model List<MVC5SampleApp.Models.RoleModel>
 @{
     ViewBag.Title = "Manage Roles";
 }
@@ -46,17 +47,15 @@
                 @foreach (var roleModel in Model)
                 {
                     <tr>
-                        <td>@roleModel.Name</td>
+                        <td id="@roleModel.Id-name">@roleModel.Name</td>
                         <td>
                             <div class="text-right">
-                                <a href="~/Role/Delete?roleName=@roleModel.Name" title="delete">
                                        
-                                    <button type="button" class="btn btn-default btn-xs" aria-label="Left Align" data-toggle="tooltip" data-placement="right" title="delete">
+                                    <button type="button" id="@roleModel.Id" class="btn btn-default btn-xs role-del" aria-label="Left Align" data-toggle="tooltip" data-placement="right" title="delete">
                                         <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> 
                                     </button>
-                                </a>
+                                
                             </div>
-                            
                             
                         </td>
                     </tr>
@@ -70,16 +69,35 @@
     </div>
 </div>
 
-@section scripts {
-   <script type="text/javascript">
-    
-       $(document).ready(function () {
 
-           $('#RoleName').focus();
-           $('[data-toggle="tooltip"]').tooltip();
-           
-    });
+@using (Html.BeginForm("Delete", "Role", FormMethod.Post, new {@class = "form-inline"}))
+{
+    @Html.AntiForgeryToken()
+    <input type="hidden" id="roleId"  name="roleId" value="1"/>
     
-</script>
-
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">Delete Role </h4>
+                </div>
+                <div class="modal-body">
+                    Are you sure you want to delete role <strong><span id="modal-name"></span></strong>?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <button type="submit" class="btn btn-warning">Delete</button>
+                </div>
+            </div>
+        </div>
+    </div>
 }
+
+@section scripts
+{
+    <script src="~/Scripts/custom.role.js"></script>
+}
+
+
+
