--- a/src/MVC5SampleApp/Views/User/Index.cshtml
+++ b/src/MVC5SampleApp/Views/User/Index.cshtml
@@ -1,7 +1,106 @@
-﻿
+﻿@model List<MVC5SampleApp.Models.UserModel>
 @{
     ViewBag.Title = "Manage Users";
 }
 
-<h2>Manage Users</h2>
+<div class="row">
 
+    <div class="col-md-8 col-lg-offset-2">
+        <h2>Manage Users</h2>
+
+        @if (Model.Any())
+        {
+            <table class="table table-striped">
+                <tr>
+                    <th>
+                        Email
+                    </th>
+                    <th class="text-center">
+                        Locked
+                    </th>    
+                    <th>
+                        <div class="text-right">
+                            Actions
+                        </div>
+                    </th>
+                </tr>
+
+                @foreach (var userModel in Model)
+                {
+                    <tr>
+                        <td id="@userModel.Id-name">@userModel.Email</td>
+                        <td class="text-center">
+                             <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> 
+                        </td>
+                        <td>
+                            <div class="text-right" style="padding-right: 13px;">
+                            @if (!userModel.IsCurrentUser)
+                            {
+                                <button type="button" id="@userModel.Id" class="btn btn-default btn-xs user-del" aria-label="Left Align" data-toggle="tooltip" data-placement="right" title="delete">
+                                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> 
+                                </button>
+                            }
+                            else
+                            {
+                                <span style="padding-right:10px;">-</span>
+                            }
+                            </div>
+                        </td>
+                    </tr>
+                }
+            </table>
+        }
+        else
+        {
+            <p>There are no roles in the system</p>
+        }
+    </div>
+</div>
+
+@using (Html.BeginForm("Delete", "User", FormMethod.Post, new {@class = "form-inline"}))
+{
+    @Html.AntiForgeryToken()
+    <input type="hidden" id="userId"  name="userId" value="1"/>
+    
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">Delete User </h4>
+                </div>
+                <div class="modal-body">
+                    Are you sure you want to delete user <strong><span id="modal-name"></span></strong>?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <button type="submit" class="btn btn-warning">Delete</button>
+                </div>
+            </div>
+        </div>
+    </div>
+}
+
+@section scripts
+{
+    <script type="text/javascript">
+    $(document).ready(function () {
+        //$('#RoleName').focus();
+        $('[data-toggle="tooltip"]').tooltip();
+        $('.user-del').click(function () {
+
+            var id = $(this).attr('id');
+            var name = $('#' + id + '-name').text();
+
+            showModal(id, name);
+        });
+        
+        function showModal(id, name) {
+
+            $('#modal-name').text(' ' + name);
+            $('#myModal').modal('show');
+            $('#userId').val(id);
+        }
+    });
+    </script>
+}
